# herbert-python

./: CHANGELOG.md  LICENSE.txt  Pipfile  README.rst  setup.cfg  setup.py
data/example/: level3.txt  sol3a.h  sol3b.h  sol3c.h
data/levels/: level1.txt  level2.txt  level3.txt  level4.txt  level5.txt
data/resources/: judgingprocess.aspx.html
data/resources/Tutorial.aspx_files/: Default.css
herbert/: __init__.py  cli.py  constants.py  counter.py  error.py  interpreter.py  level.py  parser.py  ui.py  util.py
resources/: Tutorial.aspx.html  h.ebnf
tests/: test_counter.py  test_interpreter.py  test_level.py  test_parser.py  test_runtime_environment.py  test_scoring.py
