[metadata]
name = herbert-python
version = attr: herbert.__version__
description = A CLI version of the Herbert game from Imagine Cup.
long_description = file: README.rst
url = https://github.com/dwayne/herbert-python
author = Dwayne Crooks
author_email = me@dwaynecrooks.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
keywords = herbert, imaginecup, game

[options]
packages = herbert
